# BachThesis

./: .gitignore  BachThesis.cpp  BachThesis.h  CMakeLists.txt  CMakePresets.json  CommandBuffer.hpp  Context.hpp  LoadVTK.hpp  NVIDIA GeForce RTX 4080.json  Util.h  Util.hpp
assets/: README.md  bunny.tet  bunny.vtk  crystal.vtk  cube.vtk  edge.vtk  perf.vtk  point.vtk
shader/: color.frag  colorNoDepth.frag  debug.frag  debug.frag.spv  debugSorting.frag  dispatch.task  iota.comp  lod.comp  proxyGen.mesh  proxyGen.spv  sort.comp  test.frag  test.spv  testMesh.mesh  testMesh.spv  updateLOD.comp  vertexWire.vert  vertexWire.vert.spv
